--- a/hchart/templates/index.html
+++ b/hchart/templates/index.html
@@ -12,7 +12,7 @@
     <!-- Plotly Javascript -->
     <script src="https://cdn.plot.ly/plotly-latest.min.js"></script>
 
-    <title>Holocene Brooks Code Test</title>
+    <title>H-Chart: A simple data tool</title>
 </head>
 
 <body>
